Add versions to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn
-sqlalchemy
-asyncpg
-psycopg2-binary
-alembic
-bcrypt
-python-dotenv
-python-multipart
-pytest
+fastapi~=0.116.1
+uvicorn~=0.35.0
+sqlalchemy~=2.0.43
+asyncpg~=0.30.0
+psycopg2-binary~=2.9.10
+alembic~=1.16.5
+bcrypt~=4.3.0
+python-dotenv~=1.1.1
+python-multipart~=0.0.20
+pytest~=8.4.1
