--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ FASTAPI_PORT=8000
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_DB=mydatabase
+POSTGRES_TEST_DB=testdatabase
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=123456789
