--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./.devcontainer/init-test-db.sh:/docker-entrypoint-initdb.d/init-test-db.sh
 
 volumes:
   postgres_data:
