Extend .env.example with storage directories

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ POSTGRES_DB=mydatabase
 POSTGRES_TEST_DB=testdatabase
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=123456789
+
+# File storage
+STORAGE_DIR="data"
+TEST_STORAGE_DIR="data-test"
